--- a/index.html
+++ b/index.html
@@ -1,35 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="icon" type="image/png" href="favicon.ico"/>
+    <link href="https://fonts.googleapis.com/css2?family=Amiko&display=swap" rel="stylesheet">
     <title>Yaroslav Verbytsky</title>
 </head>
 <body>
-    <h1>About</h1>
-    <p>I'm an IT professional who excels at adapting to the ever-evolving tech landscape. Starting my journey as a Java developer, I honed my skills in crafting efficient, scalable solutions. Later, I seamlessly transitioned into project management, leading teams to deliver excellence in execution. Two years ago, I embraced the data-driven world as a Data Scientist, unlocking insights and transforming businesses through cutting-edge analytics. I'm continuously seeking opportunities to harness data and technology in pursuit of smarter, more impactful solutions.</p>
+    <header>
+		<div class="header-name">
+			<p id="theme-switch">Yaroslav <span>Verbytsky</span></p>
+		</div>
+        <nav>
+            <a href="#about" class="header-button" id="about-button">About</a>
+            <a href="#skills" class="header-button" id="skills-button">Skills</a>
+            <a href="https://medium.com/@verbytsky" class="header-button" id="blog-button" target="_blank">Blog</a>
+            <div class="dropdown">
+                <a class="header-button" id="contact-button">Contact</a>
+					<div class="dropdown-content">
+							<a href="https://twitter.com/verbytsky">
+								<img src="icons/twitter.png" alt="Twitter">
+							</a>
+							<a href="https://github.com/verbytsky">
+								<img src="icons/github.png" alt="Github">
+							</a>
+							<a href="https://t.me/verbytsky">
+								<img src="icons/telegram.png" alt="Telegram">
+							</a>
+							<a href="https://www.linkedin.com/in/jaros%C5%82aw-wierzbicki/">
+								<img src="icons/linkedin.png" alt="LinkedIn">
+							</a>
+					</div>
+            </div>
+        </nav>
+    </header>
+    <section id="about">
+        <div class="column">
+            <p>Hello! I'm Yaroslav, an IT professional deeply immersed in the ever-evolving tech landscape. My career kicked off as a Java developer, where I honed my skills in crafting efficient, scalable solutions. As I ventured into project management, I found my stride in leading teams to deliver excellence.
 
-    <h2>Experience</h2>
-    <h3>Accenture</h3>
-    <h4>Data Analyst</h4>
-    <p>Full-time · 3 yrs 4 mos<br>
-    Mar 2021 - Present · 2 yrs 3 mos<br>
-    Warsaw, Mazowieckie, Poland · Remote</p>
-    <ul>
-        <li>Conducted in-depth data analysis for a large retail company to identify key customer behavior patterns, resulting in an increase in customer retention rates.</li>
-        <li>Developed and implemented machine learning models to predict customer purchasing behaviors, resulting in a more personalized customer experience.</li>
-        <li>Collaborated with cross-functional teams to gather and analyze data from various sources, including social media, customer surveys, and sales data.</li>
-        <li>Conducted ad-hoc data analysis projects to support business initiatives.</li>
-    </ul>
-    <p>Skills: Data Science · Oracle Database · SQL · Data Analysis</p>
-    
-    <h4>Business Intelligence Analyst</h4>
-    <p>Full-time · 1 yr 2 mos<br>
-    Feb 2020 - Mar 2021<br>
-    Kyiv, Kyiv City, Ukraine · Hybrid</p>
-    <ul>
-        <li>Supported clients in a range of industries, including healthcare, finance, and retail, to make data-driven decisions.</li>
-        <li>Developed and maintained dashboards and reports in Power BI, providing stakeholders with real-time insights into key performance indicators and metrics.</li>
-        <li>Conducted data analysis to identify trends and patterns in large datasets, providing valuable insights to stakeholders and enabling them to make informed decisions.</li>
-    </ul>
-    <p>Skills: Microsoft Power BI · Knime · ETL Tools · Tableau · Data Warehousing · Communication</p>
+Two years ago, I made a transition into the data-driven world of Data Science, which has been a thrilling journey so far. Unlocking insights and transforming businesses through cutting-edge analytics has been both rewarding and challenging. Today, I continue seeking opportunities to harness data and technology for creating smarter, more impactful solutions.
+
+At Accenture, I've had the privilege of working as a Data Analyst. My work here involved conducting in-depth data analysis, developing machine learning models for predicting customer behaviors, and collaborating with cross-functional teams for data gathering and analysis. The outcome of these efforts? Enhanced customer experiences and improved retention rates.
+
+Previously, I served as a Business Intelligence Analyst, during which I supported clients across industries, built and maintained Power BI dashboards and reports, and conducted detailed data analysis. The insights derived from these analyses informed critical decision-making processes.
+
+Going forward, my focus is on expanding my knowledge and skills in the realm of machine learning. I'm particularly interested in exploring Large Language Models (LLM). I believe these sophisticated tools hold immense potential for advancing the field of data science and I'm excited to delve deeper into these areas.
+
+I'm not just preparing for the future of tech - I'm actively working towards shaping it. And I invite you to join me on this exciting journey.</p>
+        </div>
+        <div class="column">
+            <img src="about-bw.png" alt="About photo">
+        </div>
+    </section>
 </body>
+<script>
+    const switchButton = document.getElementById('theme-switch');
+    switchButton.addEventListener('click', switchTheme);
+
+    function switchTheme() {
+        let bgColor = getComputedStyle(document.documentElement)
+            .getPropertyValue('--bg-color');
+        let textColor = getComputedStyle(document.documentElement)
+            .getPropertyValue('--text-color');
+
+        document.documentElement.style
+            .setProperty('--bg-color', textColor.trim());
+        document.documentElement.style
+            .setProperty('--text-color', bgColor.trim());
+    }
+</script>
+<svg>
+  <filter id="goo">
+    <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+    <feColorMatrix in="blur" type="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
+    <feBlend in="SourceGraphic" in2="goo" />
+  </filter>
+</svg>
 </html>
