Implemented a redesign of the portfolio website,

--- a/index.html
+++ b/index.html
@@ -1,79 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" type="image/png" href="favicon.ico"/>
-    <link href="https://fonts.googleapis.com/css2?family=Amiko&display=swap" rel="stylesheet">
-    <title>Yaroslav Verbytsky</title>
+  <title>Yaroslav Verbysky</title>
+  <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Amiko&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <script defer src="script.js"></script>
+
 </head>
 <body>
-    <header>
-		<div class="header-name">
-			<p id="theme-switch">Yaroslav <span>Verbytsky</span></p>
+  <!-- Header section -->
+  <header>
+	
+    <div class="social-links">
+		<a href="https://twitter.com/verbytsky">Twitter</a> |
+		<a href="https://www.linkedin.com/in/jaros%C5%82aw-wierzbicki/">LinkedIn</a> |
+		<a href="https://github.com/verbytsky">GitHub</a> |
+		<a href="https://t.me/jarslw">Telegram</a>
+    </div>
+    <div class="intro">
+		<div class="profile-image">
+			<div id="modal" class="modal">
+			  <div class="modal-content">
+				<img src="https://verbytsky.github.io/about-bw.png" alt="Your Name" class="profile-image">
+				<div class="about-text">
+				  <h2>About Me</h2>
+				  <p>Hi! I'm Yaroslav, an IT professional deeply immersed in the ever-evolving tech landscape. My career kicked off as a Java developer, where I honed my skills in crafting efficient, scalable solutions. As I ventured into project management, I found my stride in leading teams to deliver excellence. Two years ago, I made a transition into the data-driven world of Data Science, which has been a thrilling journey so far. Unlocking insights and transforming businesses through cutting-edge analytics has been both rewarding and challenging. Today, I continue seeking opportunities to harness data and technology for creating smarter, more impactful solutions. At Accenture, I've had the privilege of working as a Data Analyst. My work here involved conducting in-depth data analysis, developing machine learning models for predicting customer behaviors, and collaborating with cross-functional teams for data gathering and analysis. The outcome of these efforts? Enhanced customer experiences and improved retention rates. Previously, I served as a Business Intelligence Analyst, during which I supported clients across industries, built and maintained Power BI dashboards and reports, and conducted detailed data analysis. The insights derived from these analyses informed critical decision-making processes. Going forward, my focus is on expanding my knowledge and skills in the realm of machine learning. I'm particularly interested in exploring Large Language Models (LLM). I believe these sophisticated tools hold immense potential for advancing the field of data science and I'm excited to delve deeper into these areas. I'm not just preparing for the future of tech - I'm actively working towards shaping it. And I invite you to join me on this exciting journey.</p>
+				</div>
+			  </div>
+			</div>
+			
+			<a href="#" id="profile-link" class="gradient-border">
+			  <img src="https://verbytsky.github.io/about-bw.png" alt="Yaroslav" class="profile-image">
+			</a>
 		</div>
-        <nav>
-            <a href="#about" class="header-button" id="about-button">About</a>
-            <a href="#skills" class="header-button" id="skills-button">Skills</a>
-            <a href="https://medium.com/@verbytsky" class="header-button" id="blog-button" target="_blank">Blog</a>
-            <div class="dropdown">
-                <a class="header-button" id="contact-button">Contact</a>
-					<div class="dropdown-content">
-							<a href="https://twitter.com/verbytsky">
-								<img src="icons/twitter.png" alt="Twitter">
-							</a>
-							<a href="https://github.com/verbytsky">
-								<img src="icons/github.png" alt="Github">
-							</a>
-							<a href="https://t.me/verbytsky">
-								<img src="icons/telegram.png" alt="Telegram">
-							</a>
-							<a href="https://www.linkedin.com/in/jaros%C5%82aw-wierzbicki/">
-								<img src="icons/linkedin.png" alt="LinkedIn">
-							</a>
-					</div>
-            </div>
-        </nav>
-    </header>
-    <section id="about">
-        <div class="column">
-            <p>Hello! I'm Yaroslav, an IT professional deeply immersed in the ever-evolving tech landscape. My career kicked off as a Java developer, where I honed my skills in crafting efficient, scalable solutions. As I ventured into project management, I found my stride in leading teams to deliver excellence.
+      <h1>Hi, I'm Yaroslav</h1>
+      <h2>Transforming Data into Action.</h2>
+	  <h2>Turning Insights into Impact.</h2>
+      <a href="https://medium.com/@verbytsky" class="button">My Blog</a>
+    </div>
+  </header>
 
-Two years ago, I made a transition into the data-driven world of Data Science, which has been a thrilling journey so far. Unlocking insights and transforming businesses through cutting-edge analytics has been both rewarding and challenging. Today, I continue seeking opportunities to harness data and technology for creating smarter, more impactful solutions.
+  <!-- Portfolio section -->
+  <section class="portfolio">
+    <!-- Add your project images and descriptions here -->
+  </section>
 
-At Accenture, I've had the privilege of working as a Data Analyst. My work here involved conducting in-depth data analysis, developing machine learning models for predicting customer behaviors, and collaborating with cross-functional teams for data gathering and analysis. The outcome of these efforts? Enhanced customer experiences and improved retention rates.
+  <!-- Skills section -->
+  <section class="skills">
+    <h2>My Skills</h2>
+    <!-- Add your skills and descriptions here -->
+  </section>
 
-Previously, I served as a Business Intelligence Analyst, during which I supported clients across industries, built and maintained Power BI dashboards and reports, and conducted detailed data analysis. The insights derived from these analyses informed critical decision-making processes.
-
-Going forward, my focus is on expanding my knowledge and skills in the realm of machine learning. I'm particularly interested in exploring Large Language Models (LLM). I believe these sophisticated tools hold immense potential for advancing the field of data science and I'm excited to delve deeper into these areas.
-
-I'm not just preparing for the future of tech - I'm actively working towards shaping it. And I invite you to join me on this exciting journey.</p>
-        </div>
-        <div class="column">
-            <img src="about-bw.png" alt="About photo">
-        </div>
-    </section>
+  <!-- Contact section -->
+	<section class="contact">
+	  <div class="container">
+		<h2>Let's discuss your next project</h2>
+		<a href="[Your Contact Link]" class="contact-button">Get in touch</a>
+	  </div>
+	</section>
+  <!-- Footer section -->
+	<footer>
+	  <div class="footer">
+		<p>© 2023 All rights reserved.</p>
+		<div class="social-links">
+			<a href="https://twitter.com/verbytsky">
+				<img src="icons/twitter.png" alt="Twitter">
+			</a>
+			<a href="https://t.me/jarslw">
+				<img src="icons/telegram.png" alt="Telegram">
+			</a>
+			<a href="https://www.linkedin.com/in/jaros%C5%82aw-wierzbicki/">
+				<img src="icons/linkedin.png" alt="LinkedIn">
+			</a>
+		</div>
+	  </div>
+	</footer>
 </body>
-<script>
-    const switchButton = document.getElementById('theme-switch');
-    switchButton.addEventListener('click', switchTheme);
-
-    function switchTheme() {
-        let bgColor = getComputedStyle(document.documentElement)
-            .getPropertyValue('--bg-color');
-        let textColor = getComputedStyle(document.documentElement)
-            .getPropertyValue('--text-color');
-
-        document.documentElement.style
-            .setProperty('--bg-color', textColor.trim());
-        document.documentElement.style
-            .setProperty('--text-color', bgColor.trim());
-    }
-</script>
-<svg>
-  <filter id="goo">
-    <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
-    <feColorMatrix in="blur" type="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-    <feBlend in="SourceGraphic" in2="goo" />
-  </filter>
-</svg>
 </html>
