Added Flipping Cards

--- a/index.html
+++ b/index.html
@@ -18,12 +18,26 @@
 		<a href="https://github.com/verbytsky">GitHub</a> |
 		<a href="https://t.me/jarslw">Telegram</a>
     </div>
+	  <hr>
     <div class="intro">
 		<div class="profile-image">
 			<div id="modal" class="modal">
 			  <div class="modal-content">
-				<img src="https://verbytsky.github.io/about-bw.png" alt="Your Name" class="profile-image">
-				<div class="about-text">
+				<div class="modal-column modal-image">
+				  <img src="about-bw.png" alt="Yaroslav" class="profile-image">
+				  <div class="social-links">
+					<a href="https://twitter.com/verbytsky">
+						<img src="icons/twitter.png" alt="Twitter">
+					</a>
+					<a href="https://t.me/jarslw">
+						<img src="icons/telegram.png" alt="Telegram">
+					</a>
+					<a href="https://www.linkedin.com/in/jaros%C5%82aw-wierzbicki/">
+						<img src="icons/linkedin.png" alt="LinkedIn">
+					</a>
+				  </div>
+				</div>	
+				<div class="modal-column modal-text">
 				  <h2>About Me</h2>
 				  <p>Hi! I'm Yaroslav, an IT professional deeply immersed in the ever-evolving tech landscape. My career kicked off as a Java developer, where I honed my skills in crafting efficient, scalable solutions. As I ventured into project management, I found my stride in leading teams to deliver excellence. Two years ago, I made a transition into the data-driven world of Data Science, which has been a thrilling journey so far. Unlocking insights and transforming businesses through cutting-edge analytics has been both rewarding and challenging. Today, I continue seeking opportunities to harness data and technology for creating smarter, more impactful solutions. At Accenture, I've had the privilege of working as a Data Analyst. My work here involved conducting in-depth data analysis, developing machine learning models for predicting customer behaviors, and collaborating with cross-functional teams for data gathering and analysis. The outcome of these efforts? Enhanced customer experiences and improved retention rates. Previously, I served as a Business Intelligence Analyst, during which I supported clients across industries, built and maintained Power BI dashboards and reports, and conducted detailed data analysis. The insights derived from these analyses informed critical decision-making processes. Going forward, my focus is on expanding my knowledge and skills in the realm of machine learning. I'm particularly interested in exploring Large Language Models (LLM). I believe these sophisticated tools hold immense potential for advancing the field of data science and I'm excited to delve deeper into these areas. I'm not just preparing for the future of tech - I'm actively working towards shaping it. And I invite you to join me on this exciting journey.</p>
 				</div>
@@ -47,10 +61,67 @@
   </section>
 
   <!-- Skills section -->
-  <section class="skills">
-    <h2>My Skills</h2>
-    <!-- Add your skills and descriptions here -->
-  </section>
+	<section id="skills">
+	  <hr>
+	  <h2>My Skills</h2>
+	<div class="flip-card-container"> 
+	  <div class="flip-card">
+		<div class="flip-card-inner">
+		  <div class="flip-card-front">
+			<h1>Data Visualisation</h1>
+		  </div>
+		  <div class="flip-card-back">
+			<h3>Projects:</h3>
+			<a href="https://github.com/project1">Project 1</a>
+			<a href="https://github.com/project2">Project 2</a>
+			<a href="https://github.com/project3">Project 3</a>
+		  </div>
+		</div>
+	  </div>
+	  <div class="flip-card">
+		<div class="flip-card-inner">
+		  <div class="flip-card-front">
+			<h1>SQL</h1>
+		  </div>
+		  <div class="flip-card-back">
+			<h3>Projects:</h3>
+			<a href="https://github.com/project1">Project 1</a>
+			<a href="https://github.com/project2">Project 2</a>
+			<a href="https://github.com/project3">Project 3</a>
+		  </div>
+		</div>
+	  </div>
+	  	  <div class="flip-card">
+		<div class="flip-card-inner">
+		  <div class="flip-card-front">
+			<h1>Julia</h1>
+		  </div>
+		  <div class="flip-card-back">
+			<h3>Projects:</h3>
+			<a href="https://github.com/project1">Project 1</a>
+			<a href="https://github.com/project2">Project 2</a>
+			<a href="https://github.com/project3">Project 3</a>
+		  </div>
+		</div>
+	  </div>
+	  	  <div class="flip-card">
+		<div class="flip-card-inner">
+		  <div class="flip-card-front">
+			<h1>Python</h1>
+		  </div>
+		  <div class="flip-card-back">
+			<h3>Projects:</h3>
+			<a href="https://github.com/project1">Project 1</a>
+			<a href="https://github.com/project2">Project 2</a>
+			<a href="https://github.com/project3">Project 3</a>
+		  </div>
+		</div>
+	  </div>
+	</div>
+
+  <hr>
+	</section>
+
 
   <!-- Contact section -->
 	<section class="contact">
