Added some styling

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 				  <img src="about-bw.png" alt="Yaroslav" class="profile-image">
 				  <div class="social-links">
 					<a href="https://twitter.com/verbytsky">
-						<img src="icons/twitter.png" alt="Twitter">
+						<img src="icons/soc/twitter.png" alt="Twitter">
 					</a>
 					<a href="https://t.me/jarslw">
-						<img src="icons/telegram.png" alt="Telegram">
+						<img src="icons/soc/telegram.png" alt="Telegram">
 					</a>
 					<a href="https://www.linkedin.com/in/jaros%C5%82aw-wierzbicki/">
-						<img src="icons/linkedin.png" alt="LinkedIn">
+						<img src="icons/soc/linkedin.png" alt="LinkedIn">
 					</a>
 				  </div>
 				</div>	
@@ -45,7 +45,7 @@
 			</div>
 			
 			<a href="#" id="profile-link" class="gradient-border">
-			  <img src="https://verbytsky.github.io/about-bw.png" alt="Yaroslav" class="profile-image">
+			  <img src="about-bw.png" alt="Yaroslav" class="profile-image">
 			</a>
 		</div>
       <h1>Hi, I'm Yaroslav</h1>
@@ -54,7 +54,7 @@
       <a href="https://medium.com/@verbytsky" class="button">My Blog</a>
     </div>
   </header>
-
+<div class="snap-container">
   <!-- Portfolio section -->
   <section class="portfolio">
     <!-- Add your project images and descriptions here -->
@@ -68,7 +68,7 @@
 	  <div class="flip-card">
 		<div class="flip-card-inner">
 		  <div class="flip-card-front">
-			<h1>Data Visualisation</h1>
+			<h1>Data Warehousing</h1>
 		  </div>
 		  <div class="flip-card-back">
 			<h3>Projects:</h3>
@@ -81,7 +81,7 @@
 	  <div class="flip-card">
 		<div class="flip-card-inner">
 		  <div class="flip-card-front">
-			<h1>SQL</h1>
+			<h1>Computer Vision</h1>
 		  </div>
 		  <div class="flip-card-back">
 			<h3>Projects:</h3>
@@ -94,7 +94,7 @@
 	  	  <div class="flip-card">
 		<div class="flip-card-inner">
 		  <div class="flip-card-front">
-			<h1>Julia</h1>
+			<h1>LLM</h1>
 		  </div>
 		  <div class="flip-card-back">
 			<h3>Projects:</h3>
@@ -107,13 +107,13 @@
 	  	  <div class="flip-card">
 		<div class="flip-card-inner">
 		  <div class="flip-card-front">
-			<h1>Python</h1>
+			<h1>MISC</h1>
 		  </div>
 		  <div class="flip-card-back">
 			<h3>Projects:</h3>
-			<a href="https://github.com/project1">Project 1</a>
-			<a href="https://github.com/project2">Project 2</a>
-			<a href="https://github.com/project3">Project 3</a>
+			<a href="https://github.com/project1">Python</a>
+			<a href="https://github.com/project2">Julia</a>
+			<a href="https://github.com/project3">R</a>
 		  </div>
 		</div>
 	  </div>
@@ -130,19 +130,20 @@
 		<a href="[Your Contact Link]" class="contact-button">Get in touch</a>
 	  </div>
 	</section>
+</div>
   <!-- Footer section -->
 	<footer>
 	  <div class="footer">
 		<p>© 2023 All rights reserved.</p>
 		<div class="social-links">
 			<a href="https://twitter.com/verbytsky">
-				<img src="icons/twitter.png" alt="Twitter">
+				<img src="icons/soc/twitter.png" alt="Twitter">
 			</a>
 			<a href="https://t.me/jarslw">
-				<img src="icons/telegram.png" alt="Telegram">
+				<img src="icons/soc/telegram.png" alt="Telegram">
 			</a>
 			<a href="https://www.linkedin.com/in/jaros%C5%82aw-wierzbicki/">
-				<img src="icons/linkedin.png" alt="LinkedIn">
+				<img src="icons/soc/linkedin.png" alt="LinkedIn">
 			</a>
 		</div>
 	  </div>
