Added scroll snapping functionality to sections and header

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Amiko&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles.css">
   <script defer src="script.js"></script>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+
   <!-- Header section -->
   <header>
 	
@@ -43,7 +44,7 @@
 				</div>
 			  </div>
 			</div>
-			
+			<h2></h2>
 			<a href="#" id="profile-link" class="gradient-border">
 			  <img src="about-bw.png" alt="Yaroslav" class="profile-image">
 			</a>
@@ -54,16 +55,11 @@
       <a href="https://medium.com/@verbytsky" class="button">My Blog</a>
     </div>
   </header>
-<div class="snap-container">
-  <!-- Portfolio section -->
-  <section class="portfolio">
-    <!-- Add your project images and descriptions here -->
-  </section>
 
   <!-- Skills section -->
 	<section id="skills">
 	  <hr>
-	  <h2>My Skills</h2>
+	  <h2>My Projects:</h2>
 	<div class="flip-card-container"> 
 	  <div class="flip-card">
 		<div class="flip-card-inner">
@@ -104,38 +100,25 @@
 		  </div>
 		</div>
 	  </div>
-	  	  <div class="flip-card">
-		<div class="flip-card-inner">
-		  <div class="flip-card-front">
-			<h1>MISC</h1>
-		  </div>
-		  <div class="flip-card-back">
-			<h3>Projects:</h3>
-			<a href="https://github.com/project1">Python</a>
-			<a href="https://github.com/project2">Julia</a>
-			<a href="https://github.com/project3">R</a>
-		  </div>
-		</div>
-	  </div>
 	</div>
 
   <hr>
 	</section>
-
+  <hr>
 
   <!-- Contact section -->
 	<section class="contact">
-	  <div class="container">
-		<h2>Let's discuss your next project</h2>
+
+		<h2>Interested in collaboration? Let's connect.</h2>
+		<h2></h2>
 		<a href="[Your Contact Link]" class="contact-button">Get in touch</a>
 	  </div>
 	</section>
-</div>
   <!-- Footer section -->
+  	  <hr>
 	<footer>
 	  <div class="footer">
-		<p>© 2023 All rights reserved.</p>
-		<div class="social-links">
+	  		<div class="social-links">
 			<a href="https://twitter.com/verbytsky">
 				<img src="icons/soc/twitter.png" alt="Twitter">
 			</a>
@@ -146,7 +129,10 @@
 				<img src="icons/soc/linkedin.png" alt="LinkedIn">
 			</a>
 		</div>
+		<p>© 2023 All rights reserved.</p>
+
 	  </div>
 	</footer>
+
 </body>
 </html>
